csharp/ignite-k8s/ignite-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ignite-cluster
  labels:
    app: ignite-cluster
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ignite-cluster
  template:
    metadata:
      labels:
        # This label has to be added to the selector's section of
        # ignite-service.yaml so that the Kubernetes Ignite lookup service
        # can easily track all Ignite pods available deployed so far.
        app:  ignite-cluster
    spec:
      serviceAccountName: ignite
      containers:
      - name: ignite-node
        image: apacheignite/ignite:2.9.1
        ports:
          - containerPort: 11211 # REST port number.
          - containerPort: 47100 # communication SPI port number.
          - containerPort: 47500 # discovery SPI port number.
          - containerPort: 49112 # JMX port number.
          - containerPort: 10800 # SQL port number.
          - containerPort: 10900 # Thin clients port number. 
        volumeMounts:
        - mountPath: /opt/ignite/apache-ignite-fabric-2.1.0-bin/data2day/config
          name: ignite-config
      volumes:
      - name: ignite-config
        configMap:
          name: kubernetes-ignite-xml
