csharp/ignite-k8s/service-ignite-k8s-app.yml
apiVersion: v1
kind: Service
metadata:
  name: k8s-ignite-service
  labels:
    app: k8s-ignite-app
spec:
  selector:
    app: k8s-ignite-app
  type: ClusterIP
  ports:
    - port: 7777
      targetPort: 80
      protocol: TCP
