csharp/ignite-k8s/ingress-ignite-k8s-app.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-ignite-ingress
  labels:
    app: k8s-ignite-app
spec:
  rules:
    - host: k8s-ignite.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k8s-ignite-service
                port:
                  number: 7777
